[package]
name = "rserver"
version = "0.1.0"
authors = ["ben"]

[build-dependencies]
serde_codegen = "*"
syntex = "*"

[dependencies]
iron = "*"
persistent = "*"
rustc-serialize = "0.3"
router = "*"
hyper = "*"
time = "*"
rand = "*"
# r2d2 = "^0.6"
# r2d2_redis = "*"
redis = "0.3.1"
r2d2 = "*"
r2d2_redis = "*"
uuid = "*"


# rust-url = "*"
# hyper-router = "0.1.0"
# serde = "*"
# serde_json = "*"
# serde_macros = "*"
#
# [dependencies.redis]
# # git = "https://github.com/mitsuhiko/redis-rs.git"
# version = "*"

# [dependencies.url]
# git = "https://github.com/servo/rust-url"
